# yt-harvester

./: .gitignore  A conversation with an ex-FAANG SWE [IIrlRbTr4gU].txt  INSTALLATION.md  LICENSE  README.md  go.mod  main.go  pyproject.toml  requirements.txt  yt_harvester.py
internal/app/: run.go
internal/cli/: options.go
internal/fetch/: metadata_comments.go  transcript.go  transcript_test.go  ytdlp.go
internal/fetch/testdata/: subtitles_inspect.json
internal/model/: types.go
internal/parse/: captions.go  captions_test.go  infojson.go  infojson_test.go  json3.go  json3_test.go
internal/parse/testdata/: sample.json3
internal/render/: text.go  text_test.go
internal/render/testdata/: report.golden.txt
internal/util/: format.go  path.go  path_test.go  youtube.go  youtube_test.go
src/yt_harvester/: __init__.py  __main__.py  cli.py  config.py  downloader.py  pack.py  processor.py  render.py  utils.py
